removred navigation, footer, and core style to one seperate stylesheet to make edits across those consistant components faster

--- a/index.html
+++ b/index.html
@@ -6,26 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="css/hamburgers.css">
+    <link rel="stylesheet" href="css/root-styles.css">
     <link rel="stylesheet" href="css/style.css">
-    
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
+
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- Font Awesome-->
     <script src="https://kit.fontawesome.com/4f8f1d146c.js" crossorigin="anonymous"></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>Valley Construction Supply | Seattle, WA</title>
 </head>
 <header>
-        <!--                                              Top Navigation Bar  -->
+        <!-- Top Navigation Bar  -->
         <div aria-hidden="true" id="top-navbar">
             <div class="top-content container">
                 <img class="valley-mobile-logo vcs-black" src="images/vcs-black.png" alt="" height="80px">
@@ -91,7 +89,7 @@
             </span>
         </button>
         <nav class="container">
-            <!--                                              Desktop Navigation -->
+            <!-- Desktop Navigation -->
             <img class="valley-mobile-logo" src="images/current-logo.png" alt="" height="80px">
             <img class="valley-mobile-logo" src="images/vcs-black.png" alt="" height="80px">
             <div id="bottom-nav-bar" class="side-nav" class="container">
