--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/root-styles.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/hamburgers.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Fonts -->
@@ -94,30 +95,30 @@
             <img class="valley-mobile-logo" src="images/vcs-black.png" alt="" height="80px">
             <div id="bottom-nav-bar" class="side-nav" class="container">
                 <ul id="main-navigation" class="side-nav">
-                    <li><a class="active-menu" href="">HOME</a></li>
-                    <li class="about-li"><a class="about-dropdown" href="">ABOUT<i class="fas fa-chevron-down"></i></a>
+                    <li><a class="active-menu" href="index.html">HOME</a></li>
+                    <li class="about-li"><a class="about-dropdown" href="html/about.html">ABOUT<i class="fas fa-chevron-down"></i></a>
                         <ul class="sub-nav sub1">
-                            <li><a href="">JOBS</a></li>
-                            <li><a href="">ABOUT VCS</a></li>
+                            <li><a href="html/jobs.html">JOBS</a></li>
+                            <li><a href="html/about.html">ABOUT VCS</a></li>
                         </ul>
                     </li>
-                    <li class="services-li"><a href="">SERVICES<i class="fas fa-chevron-down"></i></a>
+                    <li class="services-li"><a href="html/services.html">SERVICES<i class="fas fa-chevron-down"></i></a>
                         <ul class="sub-nav sub2">
-                            <li><a href="">REBAR FABRICATION</a></li>
-                            <li><a href="">CONCRETE ACCESSORIES</a></li>
-                            <li><a href="">BUILDING MATERIALS</a></li>
-                            <li><a href="">TOOLS</a></li>
+                            <li><a href="html/rebar-fabrication.html">REBAR FABRICATION</a></li>
+                            <li><a href="html/concrete.html">CONCRETE ACCESSORIES</a></li>
+                            <li><a href="html/materials.html">BUILDING MATERIALS</a></li>
+                            <li><a href="html/tool.html">TOOLS</a></li>
                         </ul>
                     </li>
-                    <li><a href="">PRODUCTS</a></li>
-                    <li><a href="">PROMOTIONS</a></li>
-                    <li class="contact-li"><a href="">CONTACT<i class="fas fa-chevron-down"></i></a>
+                    <li><a href="html/products.html">PRODUCTS</a></li>
+                    <li><a href="html/promotions.html">PROMOTIONS</a></li>
+                    <li class="contact-li"><a href="html/concrete.html">CONTACT<i class="fas fa-chevron-down"></i></a>
                         <ul class="sub-nav sub3">
-                            <li><a href="">APPLY FOR CREDIT</a></li>
+                            <li><a href="html/apply.html">APPLY FOR CREDIT</a></li>
                         </ul>
                     </li>
                 </ul>
-                <button class="quote" type="button">
+                <button class="quote" type="button" onclick="location.href='html/contact.html'">
                     REQUEST A QUOTE 
                 </button>
             </div>
@@ -140,8 +141,12 @@
                     supplier of wholesale concrete, framing, rebar, draining and venting 
                     hardware for Seattle and the surrounding Puget Sound area.
                 </h2>
-                <button class="primary landing-b">ABOUT VCS</button>
-                <button class="about solid">CALL US</button>
+                <button class="primary landing-b" type="button" onclick="location.href='html/about.html'" >
+                    ABOUT VCS
+                </button>
+                <button class="about solid" type="button" onclick="location.href='html/contact.html'">
+                    CALL US
+                </button>
             </div>
         </div>
         <div class="clippy-desktop"></div>
@@ -162,7 +167,9 @@
                        your construction needs.  That includes foundation materials, concrete accessories,
                        and more.
                     </p>
-                    <button>Read More<i class="fas fa-chevron-right"></i></button>
+                    <button type="button" onclick="location.href='html/services.html'">
+                        Read More<i class="fas fa-chevron-right"></i>
+                    </button>
                 </div>
                 <div class="clip-bottom"></div>
             </div>
@@ -177,7 +184,9 @@
                        can be fulfilled. Using the standard ASA bar bend schedule our fabrication capacity 
                        can transform your structural reinforcing drawings into “real” life material.
                     </p>
-                    <button>Read More<i class="fas fa-chevron-right"></i></button>
+                    <button type="button" onclick="location.href='html/rebar-fabrication.html'">
+                        Read More<i class="fas fa-chevron-right"></i>
+                    </button>
                 </div>
                 <div class="clip-bottom"></div>
             </div>
@@ -192,7 +201,9 @@
                        Poly Sand Bags, Reinforced Filter Fence, And numerous other Geotextile products including 
                        Straw Bales, T/Post, Wood Stakes, and Straw Waddles.
                     </p>
-                    <button>Read More<i class="fas fa-chevron-right"></i></button>
+                    <button type="button" onclick="location.href='html/services.html'">
+                        Read More<i class="fas fa-chevron-right"></i>
+                    </button>
                 </div>
                 <div class="clip-bottom"></div>
             </div>
@@ -216,7 +227,9 @@
                        working hard to ensure we provide every customer with remarkable service and up 
                        to date product knowledge.
                     </p>
-                    <button class="about-content-button about solid">WHO WE ARE</button>
+                    <button class="about-content-button about solid" type="button" onclick="location.href='html/about.html'">
+                        WHO WE ARE
+                    </button>
                 </div>
 
                 <div class="numbers">
@@ -342,7 +355,9 @@
                     Quasi asperiores explicabo eius deleniti, earum sed labore 
                     unde! Debitis, explicabo officiis!
                     </p>
-                    <button>Read More<i class="fas fa-chevron-right"></i></button>
+                    <button type="button" onclick="location.href='html/services.html'">
+                        Read More<i class="fas fa-chevron-right"></i>
+                    </button>
                 </div>
             </div>
             <div class="future-card">
@@ -353,7 +368,9 @@
                     Quasi asperiores explicabo eius deleniti, earum sed labore 
                     unde! Debitis, explicabo officiis!
                     </p>
-                    <button>Read More<i class="fas fa-chevron-right"></i></button>
+                    <button type="button" onclick="location.href='html/energy-code.html'">
+                        Read More<i class="fas fa-chevron-right"></i>
+                    </button>
                 </div>
             </div>
             <div class="future-card">
@@ -364,7 +381,9 @@
                     Quasi asperiores explicabo eius deleniti, earum sed labore 
                     unde! Debitis, explicabo officiis!
                     </p>
-                    <button>Read More<i class="fas fa-chevron-right"></i></button>
+                    <button type="button" onclick="location.href='html/services.html'">
+                        Read More<i class="fas fa-chevron-right"></i>
+                    </button>
                 </div>
             </div>
         </div>
@@ -389,7 +408,9 @@
             <div id="img5"><img class="image" src="../images/Product 10.jpg" alt=""></div>
             <div id="img6"><img class="image" src="../images/Project 2.jpg" alt=""></div>
         </div>
-        <button class="solid gallery-button">SEE MORE</button>
+        <button class="solid gallery-button"  type="button" onclick="location.href='html/gallery.html'">
+            SEE MORE
+        </button>
         <div class="clippy-gallery"></div>
     </section>
 
@@ -421,14 +442,16 @@
                    their forests are used for recreation, conservation and different forms of renewable 
                    energy.
                 </p>
-                <button class="solid gallery-button showcase-button">Visit Weyerhaeuser</button>
+                <button class="solid gallery-button showcase-button"  type="button" onclick="location.href='html/contact.html'"m>
+                    Visit Weyerhaeuser
+                </button>
             </div>
         </div>
-        <div class="partners-logo container">
-            <img src="../images/strong-tie.jpg" alt="">
-            <img src="../images/insulfoam.jpg" alt="">
-            <img src="../images/advantech.jpg" alt="">
-            <img src="../images/superanchor.png" alt="">
+        <div class="partners-logo container"> 
+            <a href=""><img src="../images/strong-tie.jpg" alt=""></a>
+            <a href=""><img src="../images/insulfoam.jpg" alt=""></a>
+            <a href=""><img src="../images/advantech.jpg" alt=""></a>
+            <a href=""><img src="../images/superanchor.png" alt=""></a>
         </div>
     </section>
 
@@ -487,7 +510,9 @@
     <section id="contact">
         <div class="contact-group container">
             <h2>Questions? Get in touch today.</h2>
-            <button class="solid about-content-button contact-button">CONTACT VCS</button>
+            <button class="solid about-content-button contact-button"  type="button" onclick="location.href='html/contact.html'">
+                CONTACT VCS
+            </button>
         </div>
     </section>
 
@@ -507,12 +532,12 @@
             <div class="footer-item">
                 <h3>Quick Links</h3>
                 <div class="item-line"></div>
-                <p>Services</p>
-                <p>Sales Team</p>
-                <p>About</p>
-                <p>Products</p>
-                <p>Rebar Fabrication</p>
-                <p>Contact</p>
+                <a href="html/services">Services</a>
+                <a href="html/contact">Sales Team</a>
+                <a href="html/about.html">About</a>
+                <a href="html/products.html">Products</a>
+                <a href="html/rebar-fabrication.html">Rebar Fabrication</a>
+                <a href="html/contact.html">Contact</a>
             </div>
             <div class="footer-item">
                 <h3>Address</h3>
