--- a/html/products.html
+++ b/html/products.html
@@ -26,7 +26,7 @@
     <!-- Top Navigation Bar  -->
     <div aria-hidden="true" id="top-navbar">
         <div class="top-content container">
-            <img class="valley-mobile-logo vcs-black" src="images/vcs-black.png" alt="" height="80px">
+            <img class="valley-mobile-logo vcs-black" src="/images/vcs-black.png" alt="" height="80px">
             <div class="top-nav-container">
                 <div class="location">
                     <div class="icon">
