--- a/html/promotions.html
+++ b/html/promotions.html
@@ -111,7 +111,7 @@
                 </li>
                 <li><a href="products.html">PRODUCTS</a></li>
                 <li><a class="active-menu" href="promotions.html">PROMOTIONS</a></li>
-                <li class="contact-li"><a href="concrete.html">CONTACT<i class="fas fa-chevron-down"></i></a>
+                <li class="contact-li"><a href="contact.html">CONTACT<i class="fas fa-chevron-down"></i></a>
                     <ul class="sub-nav sub3">
                         <li><a href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
