--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </li>
                     <li><a href="html/products.html">PRODUCTS</a></li>
                     <li><a href="html/promotions.html">PROMOTIONS</a></li>
-                    <li class="contact-li"><a href="html/concrete.html">CONTACT<i class="fas fa-chevron-down"></i></a>
+                    <li class="contact-li"><a href="html/contact.html">CONTACT<i class="fas fa-chevron-down"></i></a>
                         <ul class="sub-nav sub3">
                             <li><a href="html/apply.html">APPLY FOR CREDIT</a></li>
                         </ul>
