fixed desktop footeritem second child being smaller than the rest

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                 <div class="clip-bottom"></div>
             </div>
         </div>
+        <img id="world" src="images/world.png" alt="">
         <div class="clippy"></div>
     </section>
 
