--- a/html/services.html
+++ b/html/services.html
@@ -142,6 +142,10 @@
             </div>
             <div class="clippy-desktop"></div>
         </section>
+
+        <section>
+            
+        </section>
 </main>
 
 <footer>
