--- a/html/about.html
+++ b/html/about.html
@@ -127,21 +127,261 @@
 
 <main id="main-content">
 
-        <!-- ============================================ -->
-        <!--                   LANDING                    -->
-        <!-- ============================================ -->
+    <!-- ============================================ -->
+    <!--                   LANDING                    -->
+    <!-- ============================================ -->
 
-        <section id="landing-page">
-            <div class="landing-dark"></div>
-            <div class="container landing-group">
-                <div class="landing-text">
+    <section id="landing-page">
+        <div class="landing-dark"></div>
+        <div class="container landing-group">
+            <div class="landing-text">
+                <h1>About Valley Construction Supply</h1>
+                <h2>Valley Construction Supply is the largest locally owned and operated
+                    supplier of wholesale concrete, framing, rebar, draining and venting 
+                    hardware for Seattle and the surrounding Puget Sound area.
+                </h2>
+            </div>
+        </div>
+        <p aria-hidden="true">WhoWeAre</p>
+        <div class="clippy-desktop"></div>
+    </section>
 
-                    <h1>About Valley Construction Supply</h1>
-                    
+    <!-- ============================================ -->
+	<!--                 COMMUNITIES                  -->
+    <!-- ============================================ -->
+
+    <section id="communities" class="container">
+        <h2><span>Building</span> Stronger Communities</h2>
+        <p class="sub-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+           Iste repellendus itaque vitae, hic magni, perferendis corrupti 
+           earum ratione, ut excepturi delectus nesciunt fugit illo quos.</p>
+        <div class="experience">
+            <div class="image-box">
+                <img src="/images/scaffold.jpg" alt="" height="400px" width="300px">
+            </div>
+            <div class="experience-content">
+                <p><span>25</span></p>
+                <p>Years<br> of Experience</p>
+                <h3>Building Stronger Communities</h3>
+                <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique 
+                   rerum corrupti et? Omnis ea labore modi voluptatibus fugiat dolor 
+                   eaque blanditiis? Sed modi eaque, eveniet non, at voluptas voluptatibus 
+                   tempora dignissimos rerum ducimus hic dolore ratione quaerat eligendi 
+                   voluptates exercitationem laborum illum. Optio eos atque, a aspernatur 
+                   dolore error distinctio!</P>
+                <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius repudiandae 
+                   minima doloremque? Id, ducimus consequuntur!</P>
+                <button class="solid gallery-button"  type="button" onclick="location.href='html/services.html'">
+                    SEE OUR SERVICES
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <!-- ============================================ -->
+	<!--                   MISSION                    -->
+    <!-- ============================================ -->
+
+    <section id="mission">
+        <div class="mission-content">
+        <h2 class="container">Our Mission, Our Mission</h2>
+        <p class="container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam dolores earum rerum 
+           ullam sunt consequatur voluptas, a obcaecati, assumenda libero, odit animi maiores quo 
+           molestias dicta magnam aut et ab?</p>
+        </div>
+        <div class="clippy-desktop-yellow"></div>  
+        <div class="clippy-desktop"></div>              
+    </section>
+
+    <!-- ============================================ -->
+	<!--                     SALES                    -->
+    <!-- ============================================ -->
+
+    <section id="sales">
+        <div class="sales-container container">
+            <div class="sales-topper">
+                <h2 class="heading-lines"><span>VCS</span><br> SALES TEAM</h2>
+                <p class="sales-description">Here at Valley Construction Supply we believe that the construction 
+                    industry is a relationship business and that our customers deserve personalized, 
+                    hands-on customer service that serves them beyond their construction material needs! 
+                    Scroll, to learn more about our sales staff below!!!
+                </p>
+            </div>
+            <div class="sales-people south-store">
+                <h3 class="store">South Store - PACIFIC, WA</h3>
+                <div class="sales-card">
+                    <img src="../images/Gene Gierek-copy.jpg" alt="">
+                    <div class="people-content">
+                        <h3>Gene Gierek</h3>
+                        <h4>Estimator/Project Assistant</h4>
+                        <p class="sales-people-description">Gene Gierek has been working in the construction supply industry for over 30 years and been 
+                        with Valley Construction Supply since 2012. Gene is married and has a daughter who attends 
+                        Linfield College in Oregon. Some of his hobbies include reading, food and lots of sports. 
+                        Gene has been a Chicago Blackhawks fan since birth and also proudly supports WSU.
+                        </p>
+                        <p class="sales-contact">(206) 300-3417</p>
+                        <p class="sales-contact">sales@valleyconstructionsupply.com</p>
+                    </div>
+                </div>
+                <div class="sales-card">
+                    <img src="../images/Gus Laramore-copy.jpg" alt="">
+                    <div class="people-content">
+                        <h3>Gus Laramore</h3>
+                        <h4>Outside Sales</h4>
+                        <p class="sales-people-description">Gus has been working in sales since 1998 when he first started with Valley Construction 
+                            Supply. Gus has over 20 years' experience working in sales in Washington state alone. His favorite 
+                            part of the job is being able to build quality long lasting relationships with his customers. Gus 
+                            is a loving father to three amazing girls and enjoys spending his time off with them. 
+                        </p>
+                        <p class="sales-contact">(253) 606-0713</p>
+                        <p class="sales-contact">sales4@valleyconstructionsupply.com</p>
+                    </div>
+                </div>
+                <div class="sales-card">
+                    <img src="../images/Jeff Buxton-copy.jpg" alt="">
+                    <div class="people-content">
+                        <h3>Jeff Buxton</h3>
+                        <h4>Outside Sales</h4>
+                        <p class="sales-people-description">Jeff Buxton has been with Valley Construction Supply since the very beginning, he joined the team 
+                        back in 1986. He believes the most rewarding part of the job is watching a new construction site 
+                        go up and being a part of the process.  Jeff enjoys snowmobiling, going out jeeping, spending time 
+                        at Emerald Downs and WHL Hockey.
+                        </p>
+                        <p class="sales-contact">(253) 606-5304</p>
+                        <p class="sales-contact">sales1@valleyconstructionsupply.com</p>
+                    </div>
+                </div>
+                <div class="sales-card">
+                    <img src="../images/Joe Garcia-copy.jpg" alt="">
+                    <div class="people-content">
+                        <h3>Joe Garcia</h3>
+                        <h4>Outside Sales</h4>
+                        <p class="sales-people-description">Joe Garcia is associate out of our flagship location. He enjoys being the guy that 
+                        can get you what you need when you need it. Outside of work, Joe is someone who enjoys gaming and spending time with
+                        family.
+                        </p>
+                        <p class="sales-contact">(360) 580-7696</p>
+                        <p class="sales-contact">sales3@valleyconstructionsupply.com</p>
+                    </div>
+                </div>
+                <div class="sales-card">
+                    <img src="../images/Mark Howard-copy.jpg" alt="">
+                    <div class="people-content">
+                        <h3>Mark Howard</h3>
+                        <h4>Outside Sales</h4>
+                        <p class="sales-people-description">Mark started at Valley in 1993 working in the warehouse, and in 1994 he moved into sales and has been covering east and 
+                        south king county ever since. If there is a sport to be loved mark has done it. From golfing and photography 
+                        to riding quads and scuba diving, mark has tried it. Mark is an animal lover and over the last 12 years he 
+                        helped his wife of 23 years fund raise and support English Bulldog rescues around the world.
+                        </p>
+                        <p class="sales-contact">(425) 766-1520</p>
+                        <p class="sales-contact">sales3@valleyconstructionsupply.com</p>
+                    </div>
                 </div>
             </div>
-            <div class="clippy-desktop"></div>
-        </section>
+            <div class="sales-people north-store">
+                <h3 class="store2">North Store - MARYSVILLE, WA</h3>
+                <div class="sales-card">
+                    <img src="../images/JOHN L WILLIAMS.jpg" alt="">
+                    <div class="people-content">
+                        <h3>John Williams</h3>
+                        <h4>Sales Manager</h4>
+                        <p class="sales-people-description">John been working in the construction supply industry for 31+ years. He's had a passion for 
+                        networking and providing top-notch customer service. He also happens to be a big fan of the Seattle Mariners, 
+                        horse racing, and is a member of a long-standing Horseshoe league. John is a loyal person and lives by the 
+                        mantra - plan the work, and work the plan.  
+                        </p>
+                        <p class="sales-contact">(425) 531-0829</p>
+                        <p class="sales-contact">johnw@valleyconstructionsupply.com</p>
+                    </div>
+                </div>
+                <div class="sales-card">
+                    <img src="../images/JON WOLD.jpg" alt="">
+                    <div class="people-content">
+                        <h3>Jon Wold</h3>
+                        <h4>Outside Sales</h4>
+                        <p class="sales-people-description">
+                        Jon has been working at Valley Construction Supply for 30 years and enjoys working with contractors. 
+                        His specialty is networking with other trade partners, as well as specializing in drainage, side sewers 
+                        and utilities. Some of Jon's hobbies out of work are maintaining a small apple orchard and a wood lot on 
+                        his property as well as fishing and crabbing in the summer in Port Susan where he resides.
+                        </p>
+                        <p class="sales-contact">(360) 239-0189</p>
+                        <p class="sales-contact">sales9@valleyconstructionsupply.com</p>
+                    </div>
+                </div>
+                <div class="sales-card">
+                    <img src="../images/BILLY OWEN (2).jpg" alt="">
+                    <div class="people-content">
+                        <h3>Billy Owen</h3>
+                        <h4>Outside Sales</h4>
+                        <p class="sales-people-description">Billy has been with Valley Construction Supply for 25 years. His attention to detail and customer service 
+                        is what sets him apart from our competitors. His Hobbies are golfing, fishing and watching sports.
+                        </p>
+                        <p class="sales-contact">(206) 423-5471</p>
+                        <p class="sales-contact">marysville@valleyconstructionsupply.com</p>
+                    </div>
+                </div>
+                <div class="sales-card">
+                    <img src="../images/DAVE PUGSLEY.jpg" alt="">
+                    <div class="people-content">
+                        <h3>Dave Pugsley</h3>
+                        <h4>Outside Sales</h4>
+                        <p class="sales-people-description">Dave has been in the construction hardware industry since 1998 and has worked for Valley Construction Supply 
+                        for over 6 years . Dave's highly driven success over the years has been accomplished by implementing his solid 
+                        network of contractors, offering great customer service, and many years of plan set (foundation and framing 
+                        hardware take-off experience).
+                        </p>
+                        <p class="sales-contact">(360) 580-7959</p>
+                        <p class="sales-contact">mar2@valleyconstructionsupply.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ============================================ -->
+	<!--                JOB OPPORTUNITES              -->
+    <!-- ============================================ -->
+
+    <section id="job-opportunities">
+        <div class="job-content container">
+            <h2><span>Job</span> Opportunities</h2>
+            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe accusantium reiciendis expedita 
+                inventore ex? Facilis doloremque minus mollitia aliquam quam.
+            </h3>
+
+            <p class="job">Senior - Lorem ipsum dolor sit amet.</p>
+            <p class="job">Senior - Lorem ipsum dolor sit amet.</p>
+            <p class="job">Senior - Lorem ipsum dolor sit amet.</p>
+            <p class="job">Senior - Lorem ipsum dolor sit amet.</p>
+            <p class="job">Senior - Lorem ipsum dolor sit amet.</p>
+            <p class="job">Senior - Lorem ipsum dolor sit amet.</p>
+
+            <p class="job-bottom-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum ut ex dolor inventore dolorem? Repellendus 
+               ipsum vel commodi vero beatae corrupti numquam optio quaerat dignissimos, eaque excepturi quisquam soluta 
+               possimus.
+            </p>
+        </div>
+        <button class="solid about-content-button jobs-button"  type="button" onclick="location.href='html/jobs.html'">
+            VIEW JOBS
+        </button>
+        <div class="clippy-sales"></div>
+    </section>
+
+    <!-- ============================================ -->
+	<!--                    CONTACT                   -->
+    <!-- ============================================ -->
+
+    <section id="contact">
+        <div class="contact-group container">
+            <h2>Questions? Get in touch today.</h2>
+            <button class="solid about-content-button contact-button"  type="button" onclick="location.href='html/contact.html'">
+                CONTACT VCS
+            </button>
+        </div>
+    </section>
+
 </main>
 
 <footer>
