fixed the lines on valley services header

--- a/html/services.html
+++ b/html/services.html
@@ -319,7 +319,7 @@
         <div class="container rebar-group">
             <h2><span>Rebar</span> Fabrication</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae, aperiam maiores quidem sapiente sit id! Quasi sint minima aperiam repudiandae quibusdam molestiae quae! Ducimus.</p>
-            <button class="solid rebar-button"  type="button" onclick="location.href='html/services.html'">
+            <button class="solid rebar-button"  type="button" onclick="location.href='html/rebar-fabrication.html'">
                 REBAR FABRICATION
             </button>
             <div class="icons-container">
