minor changes to services and index page for final revisons

--- a/html/about.html
+++ b/html/about.html
@@ -149,7 +149,7 @@
     <!-- ============================================ -->
 
     <section id="communities" class="container">
-        <h2><span>Building</span> Stronger Communities</h2>
+        <h2><span>Building</span> Lasting Relationships</h2>
         <p class="sub-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
            Iste repellendus itaque vitae, hic magni, perferendis corrupti 
            earum ratione, ut excepturi delectus nesciunt fugit illo quos.</p>
@@ -158,9 +158,9 @@
                 <img src="/images/scaffold.jpg" alt="" height="400px" width="300px">
             </div>
             <div class="experience-content">
-                <p><span>25</span></p>
+                <p><span>35</span></p>
                 <p>Years<br> of Experience</p>
-                <h3>Building Stronger Communities</h3>
+                <h3>Need Someone? We know someone</h3>
                 <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique 
                    rerum corrupti et? Omnis ea labore modi voluptatibus fugiat dolor 
                    eaque blanditiis? Sed modi eaque, eveniet non, at voluptas voluptatibus 
@@ -349,12 +349,9 @@
                 inventore ex? Facilis doloremque minus mollitia aliquam quam.
             </h3>
 
-            <p class="job">Senior - Lorem ipsum dolor sit amet.</p>
-            <p class="job">Senior - Lorem ipsum dolor sit amet.</p>
-            <p class="job">Senior - Lorem ipsum dolor sit amet.</p>
-            <p class="job">Senior - Lorem ipsum dolor sit amet.</p>
-            <p class="job">Senior - Lorem ipsum dolor sit amet.</p>
-            <p class="job">Senior - Lorem ipsum dolor sit amet.</p>
+            <p class="job">Inside Sales</p>
+            <p class="job">Outside Sales</p>
+            <p class="job">Warehouse/Driver</p>
 
             <p class="job-bottom-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum ut ex dolor inventore dolorem? Repellendus 
                ipsum vel commodi vero beatae corrupti numquam optio quaerat dignissimos, eaque excepturi quisquam soluta 
