--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </div>
                         <div class="location-info">
                             <p>Hours</p>
-                            <p>Mon-Fri: 9am - 5pm</p>
+                            <p>Mon-Fri: 7am - 4pm</p>
                         </div>
                     </div>
                 </div>
@@ -107,10 +107,8 @@
                             <li><a href="html/rebar-fabrication.html">REBAR FABRICATION</a></li>
                             <li><a href="html/concrete.html">CONCRETE ACCESSORIES</a></li>
                             <li><a href="html/materials.html">BUILDING MATERIALS</a></li>
-                            <li><a href="html/tool.html">TOOLS</a></li>
                         </ul>
                     </li>
-                    <li><a href="html/products.html">PRODUCTS</a></li>
                     <li><a href="html/promotions.html">PROMOTIONS</a></li>
                     <li class="contact-li"><a href="html/contact.html">CONTACT<i class="fas fa-chevron-down"></i></a>
                         <ul class="sub-nav sub3">
@@ -136,10 +134,10 @@
         <div class="landing-dark"></div>
         <div class="container landing-group">
             <div class="landing-text">
-                <h1>Your Pacific Northwest Construction Supply Specialist</h1>
+                <h1>Your Puget Sound Construction Supply Specialist</h1>
                 <h2>Valley Construction Supply is the largest locally owned and operated
                     supplier of wholesale concrete, framing, rebar, draining and venting 
-                    hardware for Seattle and the surrounding Puget Sound area.
+                    supply for Seattle and the surrounding Puget Sound area.
                 </h2>
                 <button class="primary landing-b" type="button" onclick="location.href='html/about.html'" >
                     ABOUT VCS
@@ -278,7 +276,7 @@
                             </g></g> 
                         </svg>
                         <div>
-                            <span>2500</span>
+                            <span>100K+</span>
                             <h4>Projects Completed</h4>
                         </div>
                     </div>
@@ -296,8 +294,8 @@
                         </g></g> 
                         </svg>
                         <div>
-                            <span>100%</span>
-                            <h4>Satisfaction</h4>
+                            <span>#1</span>
+                            <h4>Industry Leader</h4>
                         </div>
                     </div>
                     <div class="numbers-item">
@@ -310,8 +308,8 @@
                     <div class="numbers-item last-item">
                         <svg xmlns="http://www.w3.org/2000/svg" height="512px" viewBox="-24 0 496 496" width="512px" class=""><g><path d="m48 320h-16c0 79.398438 64.601562 144 144 144v-16c-70.574219 0-128-57.425781-128-128zm0 0" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD008"/><path d="m242.59375 67.433594c-4.464844 4.09375-10.59375 9.71875-10.59375 20.566406h16c0-3.671875 1.558594-5.246094 5.40625-8.777344 4.464844-4.09375 10.59375-9.71875 10.59375-20.574218 0-10.847657-6.128906-16.472657-10.59375-20.570313-3.847656-3.527344-5.40625-5.101563-5.40625-8.773437 0-3.664063 1.558594-5.234376 5.40625-8.761719 4.464844-4.085938 10.59375-9.703125 10.59375-20.542969h-16c0 3.65625-1.558594 5.222656-5.398438 8.753906-4.472656 4.085938-10.601562 9.703125-10.601562 20.550782 0 10.847656 6.128906 16.472656 10.59375 20.566406 3.847656 3.527344 5.40625 5.105468 5.40625 8.777344 0 3.679687-1.558594 5.253906-5.40625 8.785156zm0 0" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD008"/><path d="m194.59375 67.433594c-4.464844 4.09375-10.59375 9.71875-10.59375 20.566406h16c0-3.671875 1.558594-5.246094 5.40625-8.777344 4.464844-4.09375 10.59375-9.71875 10.59375-20.574218 0-10.847657-6.128906-16.472657-10.59375-20.570313-3.847656-3.527344-5.40625-5.101563-5.40625-8.773437 0-3.664063 1.558594-5.234376 5.40625-8.761719 4.464844-4.085938 10.59375-9.703125 10.59375-20.542969h-16c0 3.65625-1.558594 5.222656-5.398438 8.753906-4.472656 4.085938-10.601562 9.703125-10.601562 20.550782 0 10.847656 6.128906 16.472656 10.59375 20.566406 3.847656 3.527344 5.40625 5.105468 5.40625 8.777344 0 3.679687-1.558594 5.253906-5.40625 8.785156zm0 0" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD008"/><path d="m146.59375 67.433594c-4.464844 4.09375-10.59375 9.71875-10.59375 20.566406h16c0-3.671875 1.558594-5.246094 5.40625-8.777344 4.464844-4.09375 10.59375-9.71875 10.59375-20.574218 0-10.847657-6.128906-16.472657-10.59375-20.570313-3.847656-3.527344-5.40625-5.101563-5.40625-8.773437 0-3.664063 1.558594-5.234376 5.40625-8.761719 4.464844-4.085938 10.59375-9.703125 10.59375-20.542969h-16c0 3.65625-1.558594 5.222656-5.398438 8.753906-4.472656 4.085938-10.601562 9.703125-10.601562 20.550782 0 10.847656 6.128906 16.472656 10.59375 20.566406 3.847656 3.527344 5.40625 5.105468 5.40625 8.777344 0 3.679687-1.558594 5.253906-5.40625 8.785156zm0 0" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD008"/><path d="m98.59375 67.433594c-4.464844 4.09375-10.59375 9.71875-10.59375 20.566406h16c0-3.671875 1.558594-5.246094 5.40625-8.777344 4.464844-4.09375 10.59375-9.71875 10.59375-20.574218 0-10.847657-6.128906-16.472657-10.59375-20.570313-3.847656-3.527344-5.40625-5.101563-5.40625-8.773437 0-3.664063 1.558594-5.234376 5.40625-8.761719 4.464844-4.085938 10.59375-9.703125 10.59375-20.542969h-16c0 3.65625-1.558594 5.222656-5.398438 8.753906-4.472656 4.085938-10.601562 9.703125-10.601562 20.550782 0 10.847656 6.128906 16.472656 10.59375 20.566406 3.847656 3.527344 5.40625 5.105468 5.40625 8.777344 0 3.679687-1.558594 5.253906-5.40625 8.785156zm0 0" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD008"/><path d="m409.304688 181.207031c-29.480469-33.808593-73.511719-53.207031-120.808594-53.207031h-1.640625c-2.855469-9.289062-11.121094-16.3125-21.253907-16.976562l-233.601562-15.574219v19.359375l32 40.007812v31.65625c-40.28125 34.121094-64 83.046875-64 133.527344 0 97.046875 78.953125 176 176 176s176-78.953125 176-176c0-47.761719-21.207031-94.152344-57.601562-127.910156 35.890624.949218 67.136718 21.863281 81.929687 55.148437 5.097656 11.449219 7.671875 24.601563 7.671875 39.097657v65.664062c0 17.648438 14.351562 32 32 32s32-14.351562 32-32v-67.839844c0-37.761718-13.742188-74.328125-38.695312-102.953125zm-329.304688-5.207031v-16h192v16zm184.535156-49.007812c4.183594.273437 7.464844 3.785156 7.464844 7.976562v9.03125h-196.152344l-25.015625-31.257812zm-88.535156 353.007812c-88.222656 0-160-71.777344-160-160 0-19.078125 3.777344-37.9375 10.808594-55.695312 6.984375 4.421874 15.550781 7.695312 27.566406 7.695312 20.6875 0 31.257812-9.601562 40.578125-18.078125 8.550781-7.785156 15.3125-13.921875 29.824219-13.921875 14.496094 0 21.253906 6.144531 29.808594 13.921875 9.316406 8.46875 19.878906 18.078125 40.566406 18.078125 20.695312 0 31.261718-9.601562 40.589844-18.078125 8.554687-7.785156 15.320312-13.921875 29.832031-13.921875 14.515625 0 21.273437 6.144531 29.832031 13.921875 7.96875 7.238281 16.9375 15.292969 32.363281 17.460937 5.351563 15.664063 8.230469 32.050782 8.230469 48.617188 0 88.222656-71.777344 160-160 160zm143.847656-227.617188c-5.09375-2.574218-9.230468-6.261718-13.671875-10.304687-9.335937-8.476563-19.902343-18.078125-40.601562-18.078125-20.703125 0-31.269531 9.609375-40.597657 18.078125-8.550781 7.777344-15.3125 13.921875-29.824218 13.921875-14.496094 0-21.257813-6.144531-29.808594-13.921875-9.320312-8.46875-19.878906-18.078125-40.566406-18.078125-20.699219 0-31.265625 9.609375-40.585938 18.078125-8.558594 7.777344-15.320312 13.921875-29.816406 13.921875-8.96875 0-15.09375-2.425781-20.824219-6.449219 11.449219-22.078125 28.175781-41.878906 49.160157-57.550781h186.578124c21.878907 16.335938 39.09375 37.167969 50.558594 60.382812zm112.152344 99.617188c0 8.824219-7.175781 16-16 16s-16-7.175781-16-16v-65.664062c0-16.75-3.046875-32.089844-9.046875-45.59375-17.761719-39.933594-55.738281-64.742188-99.113281-64.742188h-3.839844v-32h.496094c42.671875 0 82.3125 17.398438 108.75 47.726562 22.410156 25.714844 34.753906 58.53125 34.753906 92.433594zm0 0" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD008"/></g> </svg>
                         <div class="number-last">
-                            <span>951</span>
-                            <h4>Cups of Coffee</h4>
+                            <span>200+</span>
+                            <h4>Combined Years Experience</h4>
                         </div>
                     </div>
                 </div>
@@ -345,6 +343,10 @@
                     <i class="fas fa-city"></i>
                     <h3>Commercial</h3>
                 </div>
+                <div class="icon-group">
+                    <i class="fas fa-city"></i>
+                    <h3>Mixed Use</h3>
+                </div>
             </div>
         </div>
         <div class="future-cards container">
@@ -377,10 +379,10 @@
             <div class="future-card">
                 <img src="../images/green-building.jpg" alt="">
                 <div class="future-card-content container">
-                    <h3>Green Building</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Quasi asperiores explicabo eius deleniti, earum sed labore 
-                    unde! Debitis, explicabo officiis!
+                    <h3>Supporting Green Builders</h3>
+                    <p>We sell products to any builders that consider themselves 
+                       to be green builders who want to use energy efficient materials 
+                       and products.
                     </p>
                     <button type="button" onclick="location.href='html/services.html'">
                         Read More<i class="fas fa-chevron-right"></i>
@@ -405,6 +407,7 @@
                    when you need it.  That is our promise and guarantee.  
                 </p>
             </div>
+            <img src="images/worker.jpg" alt="" width="200px" height="200px">
         </div>
         <div class="service-card-container">
             <div class="service-card">
@@ -412,7 +415,7 @@
 	                <rect x="120" y="378" style="fill:#FDD008" width="48" height="48" data-original="#F5C86E" class="" data-old_color="#F5C86E"/>
 	                <rect x="120" y="270" style="fill:#FDD008" width="48" height="48" data-original="#F5C86E" class="" data-old_color="#F5C86E"/>
                     </g><path d="M419.243,39.001h-76.379C331.823,28.48,316.898,22,300.479,22h-8.76C285.022,8.742,271.263,0,256,0s-29.021,8.742-35.719,22  H211.5c-16.419,0-31.343,6.48-42.384,17.001H92.759c-26.885,0-48.758,21.873-48.758,48.758v375.484  c0,26.885,21.873,48.758,48.758,48.758h326.483c26.885,0,48.758-21.873,48.758-48.758V87.759  C468.001,60.874,446.128,39.001,419.243,39.001z M211.501,42h15.586c4.498,0,8.442-3.003,9.639-7.338  C239.111,26.029,247.037,20,256.001,20s16.89,6.029,19.274,14.662c1.197,4.335,5.142,7.338,9.639,7.338h15.565  c21.705,0,39.571,16.75,41.354,38.001H170.147C171.93,58.75,189.797,42,211.501,42z M448.001,463.244  c0,15.857-12.901,28.758-28.758,28.758H92.759c-15.857,0-28.758-12.901-28.758-28.758V87.759c0-15.857,12.901-28.758,28.758-28.758  h62.347c-3.276,7.512-5.105,15.794-5.105,24.5v6.5c0,5.523,4.477,10,10,10H351.98c5.523,0,10-4.477,10-10v-6.5  c0-8.705-1.829-16.988-5.105-24.5h62.368c15.857,0,28.758,12.901,28.758,28.758V463.244z" data-original="#000000" class="active-path" style="fill:#000000"/><path d="M178.268,149.595l-42.762,42.763l-13.173-13.174c-3.905-3.904-10.237-3.904-14.143,0c-3.905,3.905-3.905,10.237,0,14.143  l20.245,20.245c1.953,1.953,4.512,2.929,7.071,2.929s5.119-0.976,7.071-2.929l49.833-49.833c3.905-3.905,3.905-10.237,0-14.143  C188.505,145.691,182.173,145.691,178.268,149.595z" data-original="#000000" class="active-path" style="fill:#000000"/><path d="M168.001,368h-48c-5.523,0-10,4.477-10,10v48c0,5.523,4.477,10,10,10h48c5.523,0,10-4.477,10-10v-48  C178.001,372.477,173.524,368,168.001,368z M158.001,416h-28v-28h28V416z" data-original="#000000" class="active-path" style="fill:#000000"/><path d="M168.001,260h-48c-5.523,0-10,4.477-10,10v48c0,5.523,4.477,10,10,10h48c5.523,0,10-4.477,10-10v-48  C178.001,264.477,173.524,260,168.001,260z M158.001,308h-28v-28h28V308z" data-original="#000000" class="active-path" style="fill:#000000"/></g> </svg>
-                <h3>Spot On Hot Sheets</h3>
+                <h3>Promotions And Specials</h3>
                 <p>
                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                    Totam, nesciunt voluptatem? Minima deserunt alias unde? 
@@ -460,7 +463,7 @@
                 <p>
                     We have high fill rates and very few backorders.  Whatever
                     material you need, we make sure to have them on stock and 
-                    ready to order so you'll 
+                    ready to order so you'll have what you need when you need it.
                 </p>
                 <button type="button" onclick="location.href='html/services.html'">
                     Read More<i class="fas fa-chevron-right"></i>
@@ -475,15 +478,15 @@
                 <h3>Next Day Job Site Delivery</h3>
                 <p>
                     Call us today and we can have your order delivered to your job
-                    site by tomorrow.  We can get to any job site between Thirsten
-                    and Skagit County
+                    site by tomorrow.  We can get to any job site between Thurston
+                    and Skagit County.
                 </p>
                 <button type="button" onclick="location.href='html/services.html'">
                     Read More<i class="fas fa-chevron-right"></i>
                 </button>
             </div>
         </div>
-        <button class="solid gallery-button"  type="button" onclick="location.href='html/services.html'">
+        <button class="solid service-button"  type="button" onclick="location.href='html/services.html'">
             SEE OUR SERVICES
         </button>
     </section>
@@ -532,16 +535,13 @@
             </div>
             <div class="partner-showcase-content">
                 <h3>
-                    For more than a century, Weyerhaeuser has been growing trees and making forest 
-                    products that improve lives in fundamental ways.
+                    While years build experience, they also build relationships 
                 </h3>
                 <p>
-                   Weyerhaeuser wood products are used to build homes where families are sheltered and 
-                   raised. Their land forms the building blocks of responsible development. And 
-                   their forests are used for recreation, conservation and different forms of renewable 
-                   energy.
+                   Weyerhaeuser has been a trsuted partner of ours since the day we opened
+                   our doors over 35 years ago and are the premier company for rebar manufacturing.
                 </p>
-                <button class="solid gallery-button showcase-button"  type="button" onclick="location.href='html/contact.html'"m>
+                <button class="solid showcase-button"  type="button" onclick="location.href='html/contact.html'"m>
                     Visit Weyerhaeuser
                 </button>
             </div>
@@ -599,6 +599,9 @@
                 </div>
             </div>
         </div>
+        <button class="solid sales-button"  type="button" onclick="location.href='html/about.html'"m>
+            SEE FULL TEAM
+        </button>
         <div class="clippy-sales"></div>
     </section>
 
@@ -647,7 +650,7 @@
                         <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <div class="footer-location-info">
-                        <p>234 Stewart Rd SE</p>
+                        <p>234 Stewart Rd Suite A</p>
                         <p>Pacidic, WA <br>98047</p>
                     </div>
                 </div>
